2012-02-10  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari.c, cfg.[ch], crc32.[ch], sysrom.[ch], ui.c, Makefile.in,
  dc/Makefile.dc, win32/msc/Makefile, android/jni/jni.c,
  android/jni/Android.mk.in: Two new modules (crc32, sysrom) that add a new
  functionality of searching for OS/BASIC ROM images based on known CRC32
  hashes. Added possibility to select an OS/BASIC version when many are
  available ("Select System"). When switching between PAL/NTSC, NTSC or PAL
  version of OS Rev. A is selected accordingly.
  Android port updated to work correctly (OS/BASIC version selection is still
  missing though).


2012-01-27  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* xep80.c: Rename SetCursor to SetCursorMode to avoid conflict with a winuser.h
  function under MinGW.


2012-01-19  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* xep80_fonts.c, xep80.[ch], videomode.c: Rewtritten XEP80 emulation, based on
  disassembly of the XEP80 ROM. Programs such as EIGHTY.BAS from XEP80 System
  Diskette, or XEPLIST2.BAS from ANTIC Oct/1988, now work correctly.

* videomode.c: Added authenthic aspect ratio for XEP80. Fixed issue with
  1x, 2x, 3x, and "custom" stretch settings - for all videomodes except NORMAL
  the screen would stretch twice the amount it should.


2012-01-12  Kostas Nakos  <knakos@gmail.com>
* android/*: Implement state saving, fix a keymap preference corner case


2012-01-08  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* antic.c: Fix accuracy of ANTIC_CPU_CLOCK when NEW_CYCLE_EXACT is enabled.

* monitor.c: Fix accuracy of cycle counts (when displaying the current state)
  when NEX_CYCLE_EXACT is enabled.

* xep80.c: Fix (and simplify) the code for I/O timing - it was not resistant
  to random data appearing in PORTA, which resulted in XEP80 going haywire
  after coldstart. The change breaks binary compatibility of savestates.
  Standardise indentation (tabs instead of spaces).
  Remove the XEP80_ prefix from names of static entities.

